# duck

./: CONFIG.md  Cargo.toml  README.md  USAGE.md  function.function.html  index.html  record.MyStruct.html  record.OtherStruct.html  search.html  search_index.json
example/: README.md  duck.toml
example/include/: file.hpp
extra-pages/: extra-page.md.html
src/: config.rs  main.rs  parser.rs  render.rs  templates.rs
src/templates/: enum.html  function.html  index.html  macros.html  page.html  record.html
