[package]
name = "duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { git = "https://github.com/rdmsr/clang-rs" }
clap = { version = "4.5.21", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.9"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
] }
rayon = "1.11.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
syntect = "5.3.0"
tempfile = "3.14.0"
tera = { version = "1.20.0", default-features = false }
toml = "0.8.19"

[profile.release]
lto = true
